sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:17: error: not found: value getNombresValeurs
			while(j>getNombreValeurs-1 && getValeur(j-getNombresValeurs) > v)
                                                                  ^AlgShellSort:19: error: not found: value n
			copie(j-n,j)
                                ^AlgShellSort:20: error: not found: value n
			j=j-n
                            ^