sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
/*
 gap=lgr/2
tant que gap>0:
  appliquer l'algorithme de tri par insertion en comparant i-gap et i, puis i-2gap et i-gap,
  puis i-3gap et i-2gap, etc.
  */

var gap=getNombreValeurs/2
while(gap>0)
{
	for(i<-1 to getNombreValeurs() -1)
	{
		var v=getValeur(i)
		var j=i
			while(j>getNombreValeurs-1 && getValeur(j-getNombresValeurs) > v)
			{
			copie(j-n,j)
			j=j-n
			}
	setValeur(j,v)
	}
}
}
